--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: Bug Report
-description: Notice any typos, misused terms, inconsistencies, or ambiguities? Give us a little hint!
+description: Notice any typos, misused terms, inconsistencies, or ambiguities in the docs? Give us a little hint!
 title: "Bug: "
 labels: ["bug"]
 assignees:
@@ -22,5 +22,5 @@ body:
     attributes:
       label: Describe the bug
       description: Tell us more about the bug you spotted. And if you have a revision suggestion in mind, we would love to hear it.
-      value: "I noticed that there is a [typo/misused term/inconsistency/ambiguity] in [this sentence/paragraph/figure/section]. [This] is incorrect because [...]. If you take a look at [this reference] you will agree with me. I think you folks should replace [this] with [that]. Cheers."
+      value: "I noticed that there is a [typo/misused term/inconsistency/ambiguity] in [this sentence/paragraph/figure/section/screenshot]. [This] is incorrect because [...]. If you take a look at [this reference] you will agree with me. I think you folks should replace [this] with [that]. Cheers."
       required: true
