--- a/.github/ISSUE_TEMPLATE/change_request.yml
+++ b/.github/ISSUE_TEMPLATE/change_request.yml
@@ -32,4 +32,4 @@ body:
     attributes:
       value: |
         ## Before you submit
-        - If this issue is version-specific (e.g. a new SQL feature introduced in the latest or upcoming version of RisingWave), select the corresponding software version in the Milestone section on the right sidebar. Leave it empty if you are not sure.
+        - If this issue is version-specific (e.g. a new SQL feature introduced in the latest or upcoming version of RisingWave), select the corresponding software version in **Milestone**. Leave it empty if you are not sure.
