Improve the layout of issue templates

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -22,6 +22,11 @@ body:
     attributes:
       label: Describe the bug
       description: Tell us more about the bug you spotted. And if you have a revision suggestion in mind, we would love to hear it.
-      value: "e.g. I noticed that there is a [typo/misused term/inconsistency/ambiguity] in [this sentence/paragraph/figure/section/screenshot]. [This] is incorrect because [...]. If you take a look at [this reference] you will agree with me. I think you folks should replace [this] with [that]. Cheers."
+      value: "e.g.
+I noticed that there is a [typo/misused term/inconsistency/ambiguity] in [this sentence/paragraph/figure/section/screenshot].
+[This] is incorrect because [...]. 
+I think you folks should replace [this] with [that].
+If you take a look at [this reference] you will agree with me.
+Cheers."
     validations:
       required: true
