--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -1,8 +1,8 @@
 matrix:
 - name: Markdown
-  expect_match: false
   apsell:
-    mode: en
+    ignore-case: true
+    lang: en
   dictionary:
     wordlists:
     - .wordlist.txt
@@ -14,12 +14,9 @@ matrix:
       - pymdownx.superfences
   - pyspelling.filters.html:
       comments: false
-      attributes:
-      - alt
       ignores:
       - code
       - pre
   sources:
-  - '*.md'
-  - 'docs/**/*.md'
-  - 'versioned_docs/**/*.md'
+  - '**/*.md'
+  default_encoding: utf-8
