--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@docsearch/css": "^3.3.4",
     "@docusaurus/core": "^2.3.1",
     "@docusaurus/plugin-google-analytics": "^2.3.1",
     "@docusaurus/preset-classic": "^2.3.1",
