--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
+    "@mui/styles": "^5.14.3",
     "@swc/core": "^1.3.72",
     "clsx": "^1.1.1",
     "docusaurus-plugin-image-zoom": "^1.0.1",
