--- a/.github/workflows/algolia-crawler-reindex.yml
+++ b/.github/workflows/algolia-crawler-reindex.yml
@@ -2,19 +2,23 @@ name: Algolia Crawler
 on:   
   push:
     branches: [ main ]
-
+  pull_request:
+    types: ['opened', 'edited', 'reopened', 'synchronize']
 jobs:
   algolia_recrawl:
     name: Algolia Recrawl
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v
       - name: Algolia crawler creation and crawl
-        uses: algolia/algoliasearch-crawler-github-actions@v1.0.10
+        uses: algolia/algoliasearch-crawler-github-actions@v1
         id: algolia_crawler
         with:
           crawler-user-id: ${{ secrets.CRAWLER_USER_ID }}
           crawler-api-key: ${{ secrets.CRAWLER_API_KEY }}
+          crawler-api-base-url: 'https://crawler-dev.algolia.com/api/1'
           algolia-app-id: ${{ secrets.ALGOLIA_APP_ID }}
           algolia-api-key: ${{ secrets.ALGOLIA_API_KEY }}
+          crawler-name: risingwave
           site-url: 'https://risingwave.dev'
-          crawler-api-base-url: 'https://crawler-dev.algolia.com/api/1'
