--- a/algolia/package.json
+++ b/algolia/package.json
@@ -1,6 +1,7 @@
 {
   "description": "",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "node-fetch": "^2.6.12"
   }
 }
