--- a/algolia/action.yml
+++ b/algolia/action.yml
@@ -2,30 +2,25 @@ name: Algolia Reindex
 description: Algolia Reindex
 inputs:
   CRAWLER_ID: 
-    description: 'Who to greet'
+    description: Crawler UUID
     required: true
   CRAWLER_USER_ID: 
-    description: 'Who to greet'
+    description: Crawler User Id
     required: true
   CRAWLER_API_KEY:
-    description: 'Who to greet'
+    description: Crawler API Key
     required: true
   ALGOLIA_APP_ID: 
-    description: 'Who to greet'
+    description: Algolia App Id
     required: true
   ALGOLIA_API_KEY: 
-    description: 'Who to greet'
+    description: Algolia API Key
     required: true
   CRAWLER_API_BASE_URL: 
-    description: 'Who to greet'
+    description: Crawler API Base URL
     required: true
-  who-to-greet:  # id of input
-    description: 'Who to greet'
-    required: true
-    default: 'World'
-outputs:
-  time: # id of output
-    description: 'The time we greeted you'
+# outputs:
+
 runs:
   using: 'node16'
   main: 'index.js'
