--- a/.github/workflows/algolia-crawler-reindex.yml
+++ b/.github/workflows/algolia-crawler-reindex.yml
@@ -24,12 +24,11 @@ jobs:
       id: reindex
       uses: ./algolia/
       with:
-          who-to-greet: 'Mona the Octocat'
           CRAWLER_ID: ${{ secrets.CRAWLER_ID }}
           CRAWLER_USER_ID: ${{ secrets.CRAWLER_USER_ID }}
           CRAWLER_API_KEY: ${{ secrets.CRAWLER_API_KEY }}
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
           ALGOLIA_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
-          CRAWLER_API_BASE_URL: 'https://crawler-dev.algolia.com/api/1'
+          CRAWLER_API_BASE_URL: 'https://crawler.algolia.com/api/1/'
     - name: Get the output time
       run: echo "The time was ${{ steps.reindex.outputs.time }}"
