test: pr with path filter

--- a/.github/workflows/algolia-crawler-reindex.yml
+++ b/.github/workflows/algolia-crawler-reindex.yml
@@ -2,6 +2,13 @@ name: Algolia Crawler
 on:   
   push:
     branches: [ main ]
+
+  pull_request:
+    paths: 
+    - /cloud/**
+    - /docs/**
+    - /versioned_docs/**
+    - /versioned_sidebars/**
 jobs:
   algolia_recrawl:
     name: Algolia Recrawl
