--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -13,7 +13,7 @@ body:
     attributes:
       label: Where's the bug?
       description: Where do you see the bug? A link to the doc page or the source file will do.
-      placeholder: e.g. https://www.risingwave.dev/docs/latest/intro/
+      placeholder: e.g. https://docs.risingwave.com/docs/current/intro/
     validations:
       required: true
   - type: textarea
