--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
+    "@risingwavelabs/web-packages-chatbox": "^1.8.0",
     "@swc/core": "^1.3.72",
+    "classnames": "^2.3.2",
     "clsx": "^1.1.1",
+    "copy-to-clipboard": "^3.3.3",
     "docusaurus-plugin-image-zoom": "^1.0.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
